<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_selected_date" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDate"
        android:text="@string/choose" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_selected_hour" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTime"
        android:layout_marginTop="20dp"
        android:text="@string/choose" />

    <TextView
        android:id="@+id/textViewBusLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pick_bus_line" />

    <Spinner
        android:id="@+id/spinnerBusLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBusLine"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewBusDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBusLine"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pick_bus_direction" />

    <Spinner
        android:id="@+id/spinnerBusDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBusDirection"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerBusDirection"
        android:layout_marginTop="10dp"
        android:onClick="showNotificationNewVersion"
        android:text="@string/search"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="10"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>


    <TextView
        android:id="@+id/textViewProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/progressbar_initialize" />

</RelativeLayout>